[project]
name = "robotapp-dev-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.7",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9",
    "pyjwt>=2.12.1",
    "werkzeug>=3.1.8",
]
